# sz-sdk-flags

./: .gitignore  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  szengineflags.json  szflags.json
.github/: dependabot.yml  renovate.json
.github/workflows/: README.md  bandit.yaml  flake8.yaml  gofmt.yaml  isort.yaml  pylint.yaml
docs/: README.md  development.md  errors.md  examples.md
makefiles/: darwin.mk  linux.mk  windows.mk
